--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI='' react-scripts build",
+    "build": "react-scripts build",
+    "stage": "netlify deploy",
+    "deploy": "netlify deploy --prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
